--- a/res/layout/fragment_schedule_robot.xml
+++ b/res/layout/fragment_schedule_robot.xml
@@ -3,55 +3,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <HorizontalScrollView 
+    <HorizontalScrollView
         android:id="@+id/controls_layout_view"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:background="@color/holo_green_dark" >
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center" >
 
             <ImageButton
                 android:id="@+id/up_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="-5dp"
-                android:layout_marginRight="-10dp"
                 android:background="@drawable/btn_green_selector"
                 android:scaleType="fitCenter"
-                android:src="@drawable/up_button" />
+                android:src="@drawable/up_button_little" />
 
             <ImageButton
                 android:id="@+id/down_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="-5dp"
-                android:layout_marginRight="-10dp"
                 android:background="@drawable/btn_green_selector"
                 android:scaleType="fitCenter"
-                android:src="@drawable/down_button" />
+                android:src="@drawable/down_button_little" />
 
             <ImageButton
                 android:id="@+id/left_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="-5dp"
-                android:layout_marginRight="-10dp"
                 android:background="@drawable/btn_green_selector"
                 android:scaleType="fitCenter"
-                android:src="@drawable/left_button" />
+                android:src="@drawable/left_button_little" />
 
             <ImageButton
                 android:id="@+id/right_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="-5dp"
-                android:layout_marginRight="-10dp"
                 android:background="@drawable/btn_green_selector"
                 android:scaleType="fitCenter"
-                android:src="@drawable/right_button" />
+                android:src="@drawable/right_button_little" />
 
             <ImageButton
                 android:id="@+id/stop_button"
@@ -61,14 +55,15 @@
                 android:layout_marginRight="-10dp"
                 android:background="@drawable/btn_green_selector"
                 android:scaleType="fitCenter"
-                android:src="@drawable/stop_button" />
+                android:src="@drawable/stop_button_little" />
         </LinearLayout>
     </HorizontalScrollView>
 
-    <com.bq.robotic.robopad_plusplus.drag_drop_grid.DragDropGrid
+    <com.bq.robotic.robopad_plusplus.drag_drop_grid.DraggableGridView
         android:id="@+id/grid_view"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/controls_layout_view" />
+        android:layout_below="@id/controls_layout_view"
+        android:background="@android:color/white"  />
 
 </RelativeLayout>
