--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -6,5 +6,7 @@
     
     <dimen name="pad_margin">0dp</dimen>
     <dimen name="left_right_margin">30dp</dimen>
+    
+    <dimen name="scheduler_control_height">60dp</dimen>
 
 </resources>
