--- a/app/src/main/res/layout/fragment_schedule_robot.xml
+++ b/app/src/main/res/layout/fragment_schedule_robot.xml
@@ -116,12 +116,11 @@
         android:id="@+id/progress_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:indeterminate="true"
-        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:background="@drawable/abc_menu_dropdown_panel_holo_dark"
-        android:padding="20dp"
+        android:padding="10dp"
         android:visibility="gone" />
 
 </RelativeLayout>
