[JOHNNYFIVE-38] Created the save, load and delete sequences of movements in the scheduler screen. It filters for each robot the sequences stored in irder not to load movements in a robot that it can not perform such a claw movement in the pollywog. Other changes in the UI.

--- a/app/src/main/res/drawable/schedule_stop_control_selector.xml
+++ b/app/src/main/res/drawable/schedule_stop_control_selector.xml
@@ -5,7 +5,7 @@
         <!--android:drawable="@drawable/stop_button_disabled" /> -->
 
     <item android:state_enabled="false"
-        android:drawable="@drawable/ic_stop_button" />
+        android:drawable="@drawable/ic_stop_disabled" />
 
 <item android:state_enabled="true"
     android:drawable="@drawable/ic_stop_button" />
