--- a/app/src/main/res/drawable/schedule_full_open_claw_control_selector.xml
+++ b/app/src/main/res/drawable/schedule_full_open_claw_control_selector.xml
@@ -4,7 +4,10 @@
     <item android:state_enabled="false"
         android:drawable="@drawable/full_open_claw_disabled" />
     
+    <!--<item android:state_enabled="true"-->
+        <!--android:drawable="@drawable/ic_scheduler_full_open_claw" />-->
+
     <item android:state_enabled="true"
-        android:drawable="@drawable/ic_scheduler_full_open_claw" />
+        android:drawable="@drawable/ic_full_open_claw" />
     
 </selector>
