--- a/app/src/main/res/layout/activity_select_robot.xml
+++ b/app/src/main/res/layout/activity_select_robot.xml
@@ -44,7 +44,7 @@
                     android:background="@drawable/menu_pollywog_icon_pressed_selector"
                     android:src="@drawable/menu_pollywog_icon_selector"
                     android:padding="20dp"
-                    android:layout_marginLeft="40dp"
+                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                     android:onClick="onRobotSelected"/>
 
                 <ImageButton
