[JOHNNYFIVE-39] Added preference for enabling or disabling the waits between movements in the scheduler screen. Fixed a bug in the scheduler screen when the app is sending the movements and the user press the back button.

--- a/app/src/main/res/values-es/strings_activity_robopad_plusplus_settings.xml
+++ b/app/src/main/res/values-es/strings_activity_robopad_plusplus_settings.xml
@@ -20,9 +20,14 @@
 
     <!-- Settings for Bluetooth -->
     <string name="pref_header_bluetooth">Bluetooth</string>
-    <string name="pref_summary_bluetooth">Administras las opciones del Bluetooth</string>
+    <string name="pref_summary_bluetooth">Administrar las opciones del Bluetooth</string>
     <string name="pref_title_automatic_bluetooth">Revocar el permiso del Bluetooth</string>
     <string name="pref_title_bluetooth">Habilitar/deshabilitar el Bluetooth</string>
     <string name="pref_summary_automatic_bluetooth">Revocar el permiso para habilitar y deshabilitar el Bluetooth automáticamente para ahorrar batería</string>
+
+    <!-- Settings for Scheduler -->
+    <string name="pref_header_scheduler">Programador de movimientos</string>
+    <string name="pref_summary_scheduler">Administrar las opciones del programador de movimientos</string>
+    <string name="pref_title_wait_between_movements">Esperas entre movimientos</string>
 
 </resources>
