--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -8,7 +8,9 @@
     <dimen name="activity_horizontal_margin">10dp</dimen>
     <dimen name="activity_vertical_margin">18dp</dimen>
 
-    <dimen name="scheduler_control_size">90dp</dimen>
+    <dimen name="scheduler_control_size">80dp</dimen>
+    <dimen name="scheduler_menu_size">90dp</dimen>
+    <dimen name="scheduler_commands_top_margin">90dp</dimen>
     <dimen name="scheduler_grid_margin">16dp</dimen>
     <dimen name="scheduler_delete_zone_right_margin">26dp</dimen>
     <dimen name="scheduler_delete_zone_bottom_margin">36dp</dimen>
