--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -7,7 +7,9 @@
     <dimen name="activity_horizontal_margin">10dp</dimen>
     <dimen name="activity_vertical_margin">20dp</dimen>
 
-    <dimen name="scheduler_control_size">120dp</dimen>
+    <dimen name="scheduler_control_size">110dp</dimen>
+    <dimen name="scheduler_commands_top_margin">100dp</dimen>
+    <dimen name="scheduler_menu_size">120dp</dimen>
     <dimen name="scheduler_grid_margin">20dp</dimen>
     <dimen name="scheduler_delete_zone_right_margin">30dp</dimen>
     <dimen name="scheduler_delete_zone_bottom_margin">40dp</dimen>
