[JOHNNYFIVE-74] [JOHNNYFIVE-81] [JOHNNYFIVE-75] Added the icons for the light avoider, line follower and delete sequences. Added tips for the new icons.

--- a/app/src/main/res/layout/fragment_pollywog.xml
+++ b/app/src/main/res/layout/fragment_pollywog.xml
@@ -55,10 +55,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@id/bot_icon"
-        android:background="@drawable/red_circle_btn_transparent_selector"
+        android:background="@drawable/orange_circle_btn_transparent_selector"
         android:layout_marginLeft="@dimen/robot_state_button_margin"
         android:layout_marginBottom="15dp"
-        android:src="@drawable/ic_connected" />
+        android:src="@drawable/line_follower_selector" />
 
     <com.nhaarman.supertooltips.ToolTipRelativeLayout
         android:id="@+id/activity_main_tooltipframelayout"
