--- a/app/src/main/res/layout/fragment_beetle.xml
+++ b/app/src/main/res/layout/fragment_beetle.xml
@@ -98,18 +98,18 @@
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="@dimen/robot_state_button_margin"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/red_circle_btn_transparent_selector"
-        android:src="@drawable/ic_disconnected" />
+        android:background="@drawable/orange_circle_btn_transparent_selector"
+        android:src="@drawable/line_follower_selector" />
 
     <ImageButton
-        android:id="@+id/light_follower"
+        android:id="@+id/light_avoider"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:layout_toRightOf="@id/line_follower"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/red_circle_btn_transparent_selector"
-        android:src="@drawable/ic_connected" />
+        android:background="@drawable/orange_circle_btn_transparent_selector"
+        android:src="@drawable/light_avoider_selector" />
 
     <com.nhaarman.supertooltips.ToolTipRelativeLayout
         android:id="@+id/activity_main_tooltipframelayout"
