[JOHNNYFIVE-78] Added a custom icon to the scheduler settings shown when the app is running in a large tablet

--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -11,7 +11,7 @@
     <header
         android:fragment="com.bq.robotic.robopad_plusplus.RoboPadSettings$SchedulerPreferenceFragment"
         android:title="@string/pref_header_scheduler"
-        android:icon="@android:drawable/ic_menu_recent_history"
+        android:icon="@drawable/ic_scheduler_waits"
         android:summary="@string/pref_summary_scheduler"/>
 
     <header
