--- a/app/src/main/res/layout/activity_select_robot.xml
+++ b/app/src/main/res/layout/activity_select_robot.xml
@@ -66,7 +66,7 @@
                     android:text="@string/rhino"
                     android:textColor="@android:color/white"
                     android:textStyle="bold"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:onClick="onRobotSelected"/>
 
                 <Button
@@ -79,7 +79,7 @@
                     android:text="@string/crab"
                     android:textColor="@android:color/white"
                     android:textStyle="bold"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:onClick="onRobotSelected"/>
 
                 <Button
@@ -92,7 +92,7 @@
                     android:text="@string/generic_robot"
                     android:textColor="@android:color/white"
                     android:textStyle="bold"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:onClick="onRobotSelected"/>
 
             </LinearLayout>
