--- a/app/src/main/res/xml-v14/pref_scheduler.xml
+++ b/app/src/main/res/xml-v14/pref_scheduler.xml
@@ -1,5 +1,5 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    android:icon="@android:drawable/stat_sys_data_bluetooth">
+    android:icon="@drawable/ic_scheduler_waits">
 
     <SwitchPreference
         android:key="pref_scheduler_wait_between_movements"
