--- a/app/src/main/res/xml/pref_scheduler.xml
+++ b/app/src/main/res/xml/pref_scheduler.xml
@@ -1,5 +1,5 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    android:icon="@android:drawable/ic_menu_recent_history">
+    android:icon="@drawable/ic_scheduler_waits">
 
     <CheckBoxPreference
         android:key="pref_scheduler_wait_between_movements"
