--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     <color name="purple_transparent_1">#A0a62254</color>
     <color name="purple_transparent_2">#40a62254</color>
     <color name="preferences_background">#022d4f</color>
+    <color name="semi_transparent_white">#bfffffff</color>
 </resources>
