--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,45 +1,37 @@
-<resources xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:custom="http://schemas.android.com/apk/res-auto">
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
     Base application theme, dependent on API level. This theme is replaced
     by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
 -->
-    <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light">
+    <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
             backward-compatibility can go here.
         -->
-        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
 
     </style>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-        <item name="windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowBackground">@drawable/background_gradient</item>
         <item name="android:colorBackgroundCacheHint">#00000000</item>
-
-        <item name="android:textColorPrimary">@android:color/white</item>
         <item name="android:textColorSecondary">@color/holo_turquoise</item>
-        <item name="actionBarStyle">@style/AppActionBar</item>
     </style>
 
-    <style name="SettingsBaseTheme" parent="@style/Theme.AppCompat.Light">
-        <item name="windowActionBar">true</item>
-        <item name="android:textColorSecondary">@color/semi_transparent_white</item>
+    <style name="SettingsBaseTheme" parent="@style/Theme.AppCompat">
     </style>
 
     <style name="SettingsTheme" parent="SettingsBaseTheme">
-        <item name="windowNoTitle">false</item>
         <item name="android:colorBackgroundCacheHint">#00000000</item>
         <item name="android:windowBackground">@drawable/background_gradient</item>
         <item name="actionBarStyle">@style/AppActionBar</item>
-        <item name="android:textColorPrimary">@android:color/white</item>
-        <item name="android:textColorTertiary">@color/holo_turquoise</item>
+        <item name="dialogTheme">@style/Theme.AppCompat.Light.Dialog</item>
+        <item name="alertDialogTheme">@style/Theme.AppCompat.Light.Dialog.Alert</item>
     </style>
 
     <style name="AppActionBar" parent="Widget.AppCompat.ActionBar">
